package cat.udl.eps.entsoftarch.textannot.domain;

import javax.persistence.Entity;

@Entity
public class XMLSample extends Sample{

    private String Content;

    public XMLSample() {}
}
